сделал интерфейс и сделал тесты, а также покрыл логами